--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <button id = "rock" onclick="PlayerPlay(this.id)">rock</button>
-    <button id = "paper" onclick="PlayerPlay(this.id)">paper</button>
-    <button id = "scissors" onclick="PlayerPlay(this.id)">scissors</button> 
+    <button id = "rock" onclick="Game(this.id)">rock</button>
+    <button id = "paper" onclick="Game(this.id)">paper</button>
+    <button id = "scissors" onclick="Game(this.id)">scissors</button> 
 </body>
 <script src = "script.js"></script>
 </html>
